--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,29 @@ spring:
   application:
     name: artsyshop
 
-  server:
-    port: 8080
-
   datasource:
     url: jdbc:mysql://localhost:3306/artsyshop
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
 
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
+server:
+  port: 8080
+
+api:
+  prefix: /api/v1
